Update frontend API URLs to use deployed Render backend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8000
-# Using local backend server running on port 8000
+REACT_APP_API_URL=https://kamanbo23-github-io.onrender.com
+# Using deployed Render backend
