Prepare application for Railway deployment

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=https://kamanbo23-github-io.onrender.com
+# This value will be overridden by Railway in production
+REACT_APP_API_URL=http://localhost:8000
 # Using deployed Render backend
