--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,24 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libc6-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy and install requirements first (for better caching)
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy application code
 COPY . .
 
-CMD ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000"] 
+# Make the startup script executable
+RUN chmod +x railway_start.sh
+
+# Expose port
+EXPOSE 8000
+
+# Command to run the application with migrations
+CMD ["./railway_start.sh"] 
