--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,10 +7,21 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
-    # Proxy API requests to the backend service
-    location /api/ {
-        proxy_pass http://backend:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
+    # Railway-specific headers
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+    
+    # Enable GZIP compression for faster loading
+    gzip on;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    
+    # On Railway, API requests will be handled by the backend service directly
+    # This proxy configuration is only used for local Docker Compose development
+    # location /api/ {
+    #    proxy_pass http://backend:8000/;
+    #    proxy_set_header Host $host;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    # }
 } 
