--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ SECRET_KEY=your_secure_secret_key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
+# CORS Settings (comma-separated list of allowed origins)
+CORS_ORIGINS=https://your-netlify-app.netlify.app,http://localhost:3000
+
 # Port Configuration
 BACKEND_PORT=8000
 FRONTEND_PORT=80
