--- a/railway.toml
+++ b/railway.toml
@@ -1,15 +1,16 @@
-[build]
-builder = "dockerfile"
+[project]
+name = "backend-api-project"
 
 [deploy]
 healthcheck_path = "/health"  # Add a health endpoint to your FastAPI app
 healthcheck_timeout_seconds = 10
 strategy = "rolling"
+restartPolicyType = "on_failure"
 
 [[services]]
 name = "backend-api"
 root_directory = "backend"
-dockerfile_path = "Dockerfile"
+# No dockerfile_path specified - will use Nixpacks for buildtime detection
 start_command = "./railway_start.sh"  # Use our startup script
 envs = [
   { name = "DATABASE_URL", value = "${RAILWAY_DATABASE_URL}" },
