--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,15 @@
 [phases.setup]
-nixPkgs = ["python39", "gcc", "glibc.dev", "postgresql"]
+nixPkgs = ["python39", "python39Packages.pip", "gcc", "glibc.dev", "postgresql"]
 
 [phases.install]
 cmds = [
-  "cd backend && pip install --no-cache-dir -r requirements.txt"
+  "python3 -m pip install --upgrade pip",
+  "cd backend && python3 -m pip install --no-cache-dir -r requirements.txt"
 ]
 
 [phases.build]
 cmds = [
-  "cd backend && python -c \"import os, sys; sys.path.append('.'); from database import engine; import models; models.Base.metadata.create_all(bind=engine); print('Database tables created successfully!')\""
+  "cd backend && python3 -c \"import os, sys; sys.path.append('.'); from database import engine; import models; models.Base.metadata.create_all(bind=engine); print('Database tables created successfully!')\""
 ]
 
 [start]
