Fix Railway startup race condition and enhance health checks

--- a/railway.toml
+++ b/railway.toml
@@ -5,6 +5,7 @@ name = "backend-api-project"
 healthcheck_path = "/health"
 healthcheck_timeout_seconds = 30
 healthcheck_interval_seconds = 15
+healthcheck_initial_delay_seconds = 15
 strategy = "rolling"
 restartPolicyType = "on_failure"
 
