--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-# This value will be overridden by Railway in production
-REACT_APP_API_URL=http://localhost:8000
-# Using deployed Render backend
+# Using Railway backend for production
+REACT_APP_API_URL=https://kamanbo23githubio-production.up.railway.app
+# For local development, use: http://localhost:8080
